Added standard gitignore and gitattributes

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#######################################
+# Standard Python .gitignore settings #
+#######################################
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -65,4 +68,53 @@ target/
 # pyenv
 .python-version
 
+################################
+# Standard mysisgit .gitignore #
+################################
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
 
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# =========================
+# Operating System Files
+# =========================
+
+# OSX
+# =========================
+
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
