--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+autopep8==1.2.1
 cffi==1.5.0
 colorama==0.3.6
 coverage==4.0.3
 libtcod-cffi==0.2.7
+pep8==1.7.0
 py==1.4.31
 pycparser==2.14
 pytest==2.8.7
+pytest-cov==2.2.1
 wheel==0.26.0
