--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-autopep8==1.2.1
-cffi==1.5.0
-colorama==0.3.6
+autopep8==1.2.2
+cffi==1.5.2
+colorama==0.3.7
 coverage==4.0.3
-libtcod-cffi==0.2.7
+enum==0.4.6
+libtcod-cffi==0.2.8
 pep8==1.7.0
 py==1.4.31
 pycparser==2.14
-http://www.pygame.org/ftp/pygame-1.9.1release.zip
-pytest==2.8.7
+pytest==2.9.1
 pytest-cov==2.2.1
+http://www.pygame.org/ftp/pygame-1.9.1release.zip
